# recommender-systems

./: pyproject.toml
recommender_systems/scripts/: get_data.sh
recommender_systems/src/: collaborative_filtering.py
