[tool.poetry]
name = "recommender-systems"
version = "0.1.0"
description = ""
authors = ["Johnny <jl.johnnylowe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
torch = "^2.4.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
